--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 ​
 <body>
 <!-- section for carousel -->
-<section>
+<header>
   <main class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
     <div class="orbit-wrapper">
       
@@ -62,8 +62,7 @@
       <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
     </nav>
   </main>
-
-</section> 
+</header> 
 
     <!-- <img src="Images/Universe.png" alt="Marvel Universe Image"> -->
 
@@ -111,8 +110,8 @@
   </div>
 </form> 
 </ul>
-<!--Cards Section-->
 
+<!--Cards Section-->
 <div class="grid-container">
   <div class="grid-x grid-margin-x small-up-2 medium-up-3">
     <div class="cell">
@@ -154,8 +153,6 @@
               </div>
               </div>
             </div>
-
-
   </div>
 </div>
 
@@ -186,13 +183,209 @@
 </div>
 </div>
 
-  <script src ="content-slider.js"></script>
+<!-- 23 Movies Chronological-->
+<main class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+  <div class="orbit-wrapper">
+    
+    <div class="orbit-controls">
+      <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+      <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+    </div>
+
+    <ul class="orbit-container">
+      <li class="is-active orbit-slide">
+        <figure class="orbit-figure">
+          <p>Phase One...
+          </p>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/qPWzF9TxGAX8eOO1bfg4KDmSoKqb5P4YAFjtkWUtp9MsNcb53IZHCuDL2W3isI_vxrsBIXSNgPwfYU5sxF-z=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Iron Man!</figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/z-7fMgWcXU_MLRdg-ATu0i33NxmKI6qL6A_Mlkfo8-AXbYIjq6Umws0G5U1PlYYzYSh7=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">The Incredible Hulk!</figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/dcpXtgfTTMJtq5TKt2U5sag-xvQsyo7an6wPHiu7SEu-0IKZI2NdMq6ZyZnfJs4OK2cHCgQ3vcYHieUWBJ4=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Iron Man 2! </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/91nc-R_WfdphUMufvABi9QtTU7cno5L14aoU2R0ZX8trbUOBU24tgHoRho2tqrEyCs0FZJhkMcSaQk8WC4gu=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Thor!  </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/-qnuvu5nhCU_NMA5H7O7cQnj8KLID2-ps4pDMZfxX9AE4Thbc66n8L7x4OD6qD_kNJyfi3VVkizI048GHA=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Captain America: The First Avenger </figcaption>
+        </figure>
+      </li><li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/m8oCdMmUY6qvQQmB1H6aVf1CX9CmMqQdMXD_QHk1NTV48nagvcXpkSTSLmUsfhyr_uM=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Marvel's The Avengers!  </figcaption>
+        </figure>
+      </li>
+
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <p>Phase Two...</p>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/6HmcLv9SMuIvo-HWggEiEdSVaccuZiu7K3mC2ewteKw8gIQ4ssMqur81lanWyzCh4mQXveZxbKUyyaP29A=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Iron Man 3!</figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/NnFZs96fIc939JaU1-zCRKCjNPcfsYMq3fHaze698rPac66xscH5314VvgSzIObvUAP4ia8DaME9mUpIRg=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Thor: The Dark World!</figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/I8FjfvfwI0KKUTv4s1jXV3fMDo2IZ383InRt910U-oRHphchO_h6bXHBA-6ygHBNQCWXQUr6ArPQleuV4A=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Captain America: The Winter Soldier! </figcaption>
+        </figure>
+      </li>
+      </li><li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/oI6qYMMwLnvemZN90PbTTscvZ8arzYuVAeCxHss04d_yHYb4lpHYBxET4P8zxcLSrcbOu8owJZP6nvgOm7c=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Guardians of the Galaxy! </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/YQTz2TBhE2rtzYKK7zkErn-mOcjNkHif7fQT6HnCbylCJzSRN9DYXoGZUixeFfkbwJxMnNlcZ_kQ8UL6ZCI=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Avengers: Age of Ultron! </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/qIcD3V9HvhF4vUqlFB5IvTroV6uDXy-PI371zQ3YQWGMQMUNnM0QIAuWo0MXpwdtnhtN4PQ8fAU_mUIT-fg=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Ant-Man! </figcaption>
+        </figure>
+      </li>
+
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <h1>Phase Three...</h1>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/eRY9GxitzOyKJPkKrcQCj0Yam47JkEDVVAcLV5R0PJjjzYLnAZ9wqBtElsplPJpunBrcVxQ1pURs8mcmmQ=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Captain America: Civil War! </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/FGIkSlqwpdEKGPq0CNiidjeaBQmSSVEbIZFOezBMHUOlN47lLeMO-YLuVdMdcCVLbMyvQIrj4_qtqOrP4Q=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Doctor Strange! </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/DI5oze-umAaEb05k23wGh0AQfgEHz6rClcJ5ViovGYqzTJwm17EAWVce1VI6nG_0Fo79c8Q6ywi6oWDwf-k=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Guardians of the Galaxy Vol. 2!  </figcaption>
+        </figure>
+      </li><li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/Bj-TkFW3yIiCrmX9rH6i8fhBN3VtoCnPxxrLBd9uxBvwv7SkL3WHF7qBqSHlphm49pQs=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Spider-Man: Homecoming! </figcaption>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/pbLpkjRU-pfyLKNxXzAnEHixLMd2toQGfBZ8zz314wxEcHNTqKlj9B9-49ZRUCikPIuqDxxDGT-jlw5brLLf=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Thor: Ragnarok! </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/proxy/OIJKn9tC-e49bs8UO5BN9foHriIkXOL-ApT7M9jUZqvh8Xv00s1fnVObOWOf88o-MU2oPuv4MPqdqU-mt8uVixX0mTozt5oVmwqiNYZnbE76qTfa8UUgeZ7XNQQfd_Ud=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Black Panther! </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/m8oCdMmUY6qvQQmB1H6aVf1CX9CmMqQdMXD_QHk1NTV48nagvcXpkSTSLmUsfhyr_uM=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Avengers: Infinity War!  </figcaption>
+        </figure>
+      </li><li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/nopqP7S9xxuY6iJbIH3Yci-Ma1tSm3Wdh7gpy1zNoZCeQvrjePjMGF5ZWxkraO_9zsJS=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Ant-Man and the Wasp! </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/MNuc8SF0HDLNyj3CrLEIrRARm3HTwj7mN7pWhB_LvhxpELLayZdmA6stzkcycF6bXE_EzYb2Jgdasg-0yg=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Captain Marvel! </figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://play-lh.googleusercontent.com/_gIJ5eszlkwDw7tWekePeapreSRDlQti4XtsivYKUOUq8I-wEqROEv8kjHm3EXyfdrvjS92d-VDQFNR-AyA=w400-h600-rw" alt="Space">
+          <figcaption class="orbit-caption">Spider-Man: Far From Home!  </figcaption>
+        </figure>
+      </li>
+    </ul>
+  </div>
+
+  <!-- directional buttons -->
+  <nav class="orbit-bullets">
+    <button class="is-active" data-slide="0"> 
+      <!-- This button starts 1st -->
+      <span class="show-for-sr">First slide details.</span>
+      <span class="show-for-sr" data-slide-active-label>Current Slide</span>
+    </button>
+    <button data-slide="1"><span class="show-for-sr">First slide details.</span></button>
+    <button data-slide="2"><span class="show-for-sr">Second slide details.</span></button>
+    <button data-slide="3"><span class="show-for-sr">Third slide details.</span></button>
+    <button data-slide="4"><span class="show-for-sr">Fourth slide details.</span></button>
+    <button data-slide="5"><span class="show-for-sr">Five slide details.</span></button>
+    <button data-slide="6"><span class="show-for-sr">Sixth slide details.</span></button>
+    <button data-slide="7"><span class="show-for-sr">Seventh slide details.</span></button>
+    <button data-slide="8"><span class="show-for-sr">Eighth slide details.</span></button>
+    <button data-slide="9"><span class="show-for-sr">Nineth slide details.</span></button>
+    <button data-slide="10"><span class="show-for-sr">Tenth slide details.</span></button>
+    <button data-slide="11"><span class="show-for-sr">Eventh slide details.</span></button>
+    <button data-slide="12"><span class="show-for-sr">Twelvth slide details.</span></button>
+    <button data-slide="13"><span class="show-for-sr">Thirteenth slide details.</span></button>
+    <button data-slide="14"><span class="show-for-sr">Fourteenth slide details.</span></button>
+    <button data-slide="15"><span class="show-for-sr">Fivteenth slide details.</span></button>
+    <button data-slide="16"><span class="show-for-sr">Sixteenth slide details.</span></button>
+    <button data-slide="17"><span class="show-for-sr">Seventeeth slide details.</span></button>
+    <button data-slide="18"><span class="show-for-sr">Eighteenth slide details.</span></button>
+    <button data-slide="19"><span class="show-for-sr">Nineteeth slide details.</span></button>
+    <button data-slide=20><span class="show-for-sr">Twentieth slide details.</span></button>
+    <button data-slide="21"><span class="show-for-sr">Twenty First slide details.</span></button>
+    <button data-slide="22"><span class="show-for-sr">Twenty Second slide details.</span></button>
+    <button data-slide="23"><span class="show-for-sr">Twenty Third slide details.</span></button>
+    <button data-slide="22"><span class="show-for-sr">Twenty Fourth slide details.</span></button>
+    <button data-slide="23"><span class="show-for-sr">Twenty Fifth slide details.</span></button>
+  </nav>
+</main>
+
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <!-- <script src="js/vendor/what-input.js"></script> -->
 
   <!-- Compressed JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
   <script>$(document).foundation();</script>
+  
+  <!-- Script Links -->
+  <script src ="content-slider.js"></script>
 ​<script src="script.js"></script>
 </body>
 </html>
