--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
       <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
     </div>
 
-    <ul class="orbit-container">
+    <!-- <ul class="orbit-container">
       <li class="is-active orbit-slide">
         <figure class="orbit-figure">
           <p>Phase One...
           </p>
         </figure>
-      </li>
+      </li> -->
       <li class="orbit-slide">
         <figure class="orbit-figure">
           <img class="orbit-image" src="https://play-lh.googleusercontent.com/qPWzF9TxGAX8eOO1bfg4KDmSoKqb5P4YAFjtkWUtp9MsNcb53IZHCuDL2W3isI_vxrsBIXSNgPwfYU5sxF-z=w400-h600-rw" alt="Space">
@@ -234,12 +234,12 @@
           <figcaption class="orbit-caption">Marvel's The Avengers!  </figcaption>
         </figure>
       </li>
-
-      <li class="orbit-slide">
+      
+      <!-- <li class="orbit-slide">
         <figure class="orbit-figure">
           <p>Phase Two...</p>
         </figure>
-      </li>
+      </li> -->
       <li class="orbit-slide">
         <figure class="orbit-figure">
           <img class="orbit-image" src="https://play-lh.googleusercontent.com/6HmcLv9SMuIvo-HWggEiEdSVaccuZiu7K3mC2ewteKw8gIQ4ssMqur81lanWyzCh4mQXveZxbKUyyaP29A=w400-h600-rw" alt="Space">
@@ -277,11 +277,11 @@
         </figure>
       </li>
 
-      <li class="orbit-slide">
+      <!-- <li class="orbit-slide">
         <figure class="orbit-figure">
           <h1>Phase Three...</h1>
         </figure>
-      </li>
+      </li> -->
       <li class="orbit-slide">
         <figure class="orbit-figure">
           <img class="orbit-image" src="https://play-lh.googleusercontent.com/eRY9GxitzOyKJPkKrcQCj0Yam47JkEDVVAcLV5R0PJjjzYLnAZ9wqBtElsplPJpunBrcVxQ1pURs8mcmmQ=w400-h600-rw" alt="Space">
@@ -299,10 +299,12 @@
           <img class="orbit-image" src="https://play-lh.googleusercontent.com/DI5oze-umAaEb05k23wGh0AQfgEHz6rClcJ5ViovGYqzTJwm17EAWVce1VI6nG_0Fo79c8Q6ywi6oWDwf-k=w400-h600-rw" alt="Space">
           <figcaption class="orbit-caption">Guardians of the Galaxy Vol. 2!  </figcaption>
         </figure>
-      </li><li class="orbit-slide">
+      </li>
+      <li class="orbit-slide">
         <figure class="orbit-figure">
           <img class="orbit-image" src="https://play-lh.googleusercontent.com/Bj-TkFW3yIiCrmX9rH6i8fhBN3VtoCnPxxrLBd9uxBvwv7SkL3WHF7qBqSHlphm49pQs=w400-h600-rw" alt="Space">
           <figcaption class="orbit-caption">Spider-Man: Homecoming! </figcaption>
+      </li>
       <li class="orbit-slide">
         <figure class="orbit-figure">
           <img class="orbit-image" src="https://play-lh.googleusercontent.com/pbLpkjRU-pfyLKNxXzAnEHixLMd2toQGfBZ8zz314wxEcHNTqKlj9B9-49ZRUCikPIuqDxxDGT-jlw5brLLf=w400-h600-rw" alt="Space">
@@ -337,7 +339,6 @@
           <img class="orbit-image" src="https://play-lh.googleusercontent.com/_gIJ5eszlkwDw7tWekePeapreSRDlQti4XtsivYKUOUq8I-wEqROEv8kjHm3EXyfdrvjS92d-VDQFNR-AyA=w400-h600-rw" alt="Space">
           <figcaption class="orbit-caption">Spider-Man: Far From Home!  </figcaption>
         </figure>
-      </li>
     </ul>
   </div>
 
@@ -367,12 +368,8 @@
     <button data-slide="17"><span class="show-for-sr">Seventeeth slide details.</span></button>
     <button data-slide="18"><span class="show-for-sr">Eighteenth slide details.</span></button>
     <button data-slide="19"><span class="show-for-sr">Nineteeth slide details.</span></button>
-    <button data-slide=20><span class="show-for-sr">Twentieth slide details.</span></button>
+    <button data-slide="20"><span class="show-for-sr">Twentieth slide details.</span></button>
     <button data-slide="21"><span class="show-for-sr">Twenty First slide details.</span></button>
-    <button data-slide="22"><span class="show-for-sr">Twenty Second slide details.</span></button>
-    <button data-slide="23"><span class="show-for-sr">Twenty Third slide details.</span></button>
-    <button data-slide="22"><span class="show-for-sr">Twenty Fourth slide details.</span></button>
-    <button data-slide="23"><span class="show-for-sr">Twenty Fifth slide details.</span></button>
   </nav>
 </main>
 
