--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
         <li class="is-active orbit-slide">
           <figure class="orbit-figure">
             <img class="orbit-image" src="https://cdn.onebauer.media/one/media/5d94/d7c8/c11f/b27f/c031/c3fc/mcu-endgame-main.jpg?quality=50&width=1800&ratio=16-9&resizeStyle=aspectfill&format=jpg" alt="Space">
-            <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+            <figcaption class="orbit-caption">...Avengers Assemble!</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
             <img class="orbit-image" src="https://cdn.onebauer.media/one/media/5d95/e45e/c11f/b298/9e31/df56/avengers-assemble.jpg?quality=50&width=800&height=520&ratio=1-1&resizeStyle=aspectfit&format=jpg" alt="Space">
-            <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+            <figcaption class="orbit-caption">Everybody Ready!...</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
             <img class="orbit-image" src="https://cdn.onebauer.media/one/media/5d95/e4bf/c11f/b205/7c31/df63/avengers-endgame.jpg?quality=50&width=800&height=520&ratio=1-1&resizeStyle=aspectfit&format=jpg" alt="Space">
-            <figcaption class="orbit-caption">Encapsulating</figcaption>
+            <figcaption class="orbit-caption">It's...Time!!!</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
             <img class="orbit-image" src="https://cdn.onebauer.media/one/media/5d94/d3b0/c11f/b232/6131/c391/ant-man-and-the-wasp.jpg?quality=50&width=800&height=520&ratio=1-1&resizeStyle=aspectfit&format=jpg" alt="Space">
-            <figcaption class="orbit-caption">Outta This World</figcaption>
+            <figcaption class="orbit-caption">...Are you ready?!?!</figcaption>
           </figure>
         </li>
       </ul>
