--- a/index.html
+++ b/index.html
@@ -66,41 +66,45 @@
 </section> 
 
     <!-- <img src="Images/Universe.png" alt="Marvel Universe Image"> -->
-
+    <div class="nav-container">
+      <div class="nav-left">
 <!-- Dropdown Menu -->
 <ul class="dropdown menu" data-dropdown-menu>
   <li>
-    <a href="#">Characters</a>
+    <a href="#">Movies</a>
     <ul class="menu">
       <li><button href="#">Black-Widow</button></li>
       <li><button href="#">Captain-America</button></li>
       <li><button href="#">Hulk</button></li>
       <li><button href="#">Iron-Man</button></li>
-      <!-- Extra Characters -->
-    </ul>
-  </li>
-
-  <li>
-    <a href="#">Movies</a>
-    <ul class="menu" style="text-align: center;">
-      <li><button href="#">Captain-America: The First Avenger</button></li>
-      <li><button href="#">Captain Marvel</button></li>
-      <li><button href="#">Iron Man</button></li>
-      <li><button href="#">Iron Man 2</button></li>
-      <!--Add extra movies below -->
+      <!-- Extra Movies -->
     </ul>
   </li>
 
   <li>
     <a href="#">Comics</a>
+    <ul class="menu" style="text-align: center;">
+      <li><button href="#">Captain-America: The First Avenger</button></li>
+      <li><button href="#">Captain Marvel</button></li>
+      <li><button href="#">Iron Man</button></li>
+      <li><button href="#">Iron Man 2</button></li>
+      <!--Add extra comics below -->
+    </ul>
+  </li>
+
+  <li>
+    <a href="#">Characters</a>
     <ul class="menu">
       <li><button href="#">Deadpool</button></li>
       <li><button href="#">Wolverine</button></li>
       <li><button href="#">Loki</button></li>
       <li><button href="#">Black Panther</button></li>
-      <!--Add extra comics  -->
+      <!--Add extra characters  -->
     </ul>
   </li>
+</ul>
+</div>
+<div class="nav-right">
     <!--Search Bar-->
   <form class="searchBar" autocomplete="on">
   <div class="input-group">
@@ -110,7 +114,8 @@
     </div>
   </div>
 </form> 
-</ul>
+</div>
+</div>
 <!--Cards Section-->
 
 <div class="grid-container">
@@ -148,7 +153,7 @@
           <div class="cell">
             <div class="card">
               <div class="card-section">
-                <h4 class="test" style="font-family: 'Bangers', cursive;">Iron-Man/Movies they were in</h4>
+                <h4 style="font-family: 'Bangers', cursive;">Iron-Man/Movies they were in</h4>
               <img class="cardImage" src="https://via.placeholder.com/550x550">
                 <p class="pCards test">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
