Commented out button and added header image.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/motion-ui@1.2.3/dist/motion-ui.min.css" />
   <link rel="stylesheet" href="style.css">
+  <link
+      rel=“stylesheet”
+      href=“https://use.fontawesome.com/releases/v5.8.1/css/all.css”
+      integrity=“sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf”
+      crossorigin=“anonymous”
+    />
 </head>
 ​
 <body>
-<!-- section for carousel -->
+<!-- section for carousel
 <section>
   <main class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
     <div class="orbit-wrapper">
@@ -53,8 +59,8 @@
 
     <nav class="orbit-bullets">
       <button class="is-active" data-slide="0"> 
-        <!-- This button starts 1st -->
-        <span class="show-for-sr">First slide details.</span>
+        This button starts 1st -->
+        <!-- <span class="show-for-sr">First slide details.</span>
         <span class="show-for-sr" data-slide-active-label>Current Slide</span>
       </button>
       <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
@@ -63,8 +69,8 @@
     </nav>
   </main>
 
-</section> 
-
+</section>  -->
+<img src="Images/header.png" alt="">
     <!-- <img src="Images/Universe.png" alt="Marvel Universe Image"> -->
     <div class="nav-container">
       <div class="nav-left">
@@ -110,7 +116,8 @@
   <div class="input-group">
     <input class="input-group-field" type="text" autocomplete="off">
     <div class="input-group-button">
-      <button type="submit" class="button float-right" id=searchButton value="Search">Search</button>
+      <!-- <button  class="button float-right" id=searchButton value="Search">Search</button> -->
+      <!-- <button type="submit" id="searchButton"><i class="fas fa-save float-right"></i></button> -->
     </div>
   </div>
 </form> 
